--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Healthy Food</title>
+        <title>Explorer Gear</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -10,11 +11,11 @@
        <header>
            <nav class="topnav">
                <div class="navlogo">
-                   <img src="images/logo.jpg">
+                   <img src="images/logo.png">
                </div>
                <div class="navmenu">
                    <ul>
-                       <a href="#"><li>Home</li></a>
+                       <a href="index.html"><li>Home</li></a>
                        <a href="#"><li>Blog</li></a>
                        <a href="#"><li>Gallery</li></a>
                        <a href="#"><li>Contact</li></a>
@@ -22,24 +23,102 @@
                </div>
            </nav>
            <div class="jumbotron">
-               <img src="images/j-1.webp">
+               <img src="images/Banner.png">
            </div>
        </header>
 
       <main>
         <div class="content">
             <article>
-
+                <a href="#">
+                    <div class="article-box">
+                        <div class="article-container">
+                            <div class="thumbnail">
+                                <img src="images/article.jpg">
+                            </div>
+                            <div class="fill">
+                                <div class="headline">
+                                    <h2>18 Peralatan Penting Mendaki Gunung yang Wajib Dibawa</h2>
+                                </div>
+                                <div class="sub-article">
+                                    <span face="&quot;verdana&quot; , sans-serif"><b>Peralatan dan Perlengkapan Mendaki Gunung. </b>Kegiatan mendaki gunung kini banyak digemari berbagai kalangan usia khususnya muda-mudi yang suka berpetualang ke alam bebas.&nbsp;</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </article>
-        </div>
-        <aside>
-            <div class="card">
-                <div class="rounded-photo">
-                    <img src="images/feri.jpeg">
-                    <h4>Feri Andriyanto Sandika</h4>
-                </div>
+            <article>
+                <a href="#">
+                    <div class="article-box">
+                        <div class="article-container">
+                            <div class="thumbnail">
+                                <img src="images/article2.jpg">
+                            </div>
+                            <div class="fill">
+                                <div class="headline">
+                                    <h2>5 Rekomendasi Gunung di Indonesia Untuk Pendaki Pemula</h2>
+                                </div>
+                                <div class="sub-article">
+                                    <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum....
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="#">
+                    <div class="article-box">
+                        <div class="article-container">
+                            <div class="thumbnail">
+                                <img src="images/article3.jpg">
+                            </div>
+                            <div class="fill">
+                                <div class="headline">
+                                    <h2>7 Persiapan Penting Mendaki Gunung</h2>
+                                </div>
+                                <div class="sub-article">
+                                    <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum....
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <div class="more">
+                <button>More Article</button>
             </div>
-        </aside>
+        </div>
+        <div class="rightside">
+            <aside>
+                <div class="card">
+                    <img src="images/Vertical_Banner.png" style="width: 100%; height:auto;">
+                </div>
+            </aside>
+            <aside>
+                <div class="card">
+                    <div class="rounded-photo">
+                        <img src="images/feri.jpeg">
+                        <h4>Feri Andriyanto Sandika</h4><hr>
+                        <div class="socialmedia">
+                            <a href="https://www.facebook.com/feri.a.sandika/" target="_blank"><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.instagram.com/feriinformatika/" target="_blank"><i class="bi bi-instagram"></i></a>
+                            <a href="#"><i class="bi bi-whatsapp"></i></a>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+            </aside>
+        </div>
       </main>
+      <footer>
+        <div class="footer-left">
+            <img src="images/logo2.png" width="100px">
+        </div>
+        <div class="footer-center">
+
+        </div>
+      </footer>
     </body>
 </html>
